--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -133,10 +133,12 @@
 
 .menu  
   display: flex
+  
   &__wrap
     position: sticky
     left: 0
     bottom: 0
+    z-index: 3
 
   &__link-wrap
     list-style: none
